[gd_scene format=3 uid="uid://cooakotr76fm4"]

[ext_resource type="Script" uid="uid://luwldsgryie4" path="res://src/ui/menus/main_menu.gd" id="1_7lrnf"]

[node name="MainMenu" type="Control" unique_id=801312819]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7lrnf")

[node name="ColorRect" type="ColorRect" parent="." unique_id=757648385]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3372549, 0.4117647, 1, 1)

[node name="MenuButtonsContainer" type="VBoxContainer" parent="." unique_id=2048053310]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="MenuButtonsContainer" unique_id=301324429]
layout_mode = 2
text = "TITLE"

[node name="Play" type="Button" parent="MenuButtonsContainer" unique_id=2054431329]
layout_mode = 2
text = "PLAY"

[node name="HowToPlay" type="Button" parent="MenuButtonsContainer" unique_id=1427186526]
layout_mode = 2
text = "HOW_TO_PLAY"

[node name="Options" type="Button" parent="MenuButtonsContainer" unique_id=180185656]
layout_mode = 2
text = "OPTIONS"

[node name="Credits" type="Button" parent="MenuButtonsContainer" unique_id=319635158]
layout_mode = 2
text = "CREDITS"

[node name="Exit" type="Button" parent="MenuButtonsContainer" unique_id=178739138]
layout_mode = 2
text = "EXIT"

[node name="Version" type="Label" parent="." unique_id=433446085]
layout_mode = 0
offset_left = 40.0
offset_top = 216.0
offset_right = 80.0
offset_bottom = 239.0
text = "VER"

[connection signal="pressed" from="MenuButtonsContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MenuButtonsContainer/HowToPlay" to="." method="_on_instruction_pressed"]
[connection signal="pressed" from="MenuButtonsContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuButtonsContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MenuButtonsContainer/Exit" to="." method="_on_exit_pressed"]
